# juzhen_r_fanyi

./: .gitignore  Cargo.toml  Cargo.toml.backup  build.rs  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml
src/: app.slint  lib.rs  main.rs
src/model/: data_core.rs  mod.rs  performance.rs  shadow_tree.rs
src/utils/: clipboard.rs  fs.rs  mod.rs
src/vm/: bridge.rs  mod.rs
