[package]
name = "juzhen_r_fanyi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "juzhen_r_fanyi"
path = "src/main.rs"

[lib]
name = "juzhen_r_fanyi"
path = "src/lib.rs"

[dependencies]
slint = { version = "1.13.0", features = ["renderer-skia", "renderer-skia-opengl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
jsonpath-rust = "1.0.4"
copypasta = "0.10.2"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1.0"
rfd = "0.14"

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
slint-build = "1.13.0"

[[example]]
name = "performance_benchmark"
path = "examples/performance_benchmark.rs"

